--- a/_includes/readtime.html
+++ b/_includes/readtime.html
@@ -5,11 +5,11 @@
 {% assign finalReadTime = calcReadTime | divided_by:200 | round: 2 %}
 {% assign number = finalReadTime | round %}
 {% if number >= 1 %}
-  {% assign yesReadTime = number | append: " minute read" %}
-  <span class="reader-time post-meta"><span class="d-none d-md-inline middot">&middot;</span> {{ yesReadTime }}</span>
+  {% assign yesReadTime = number | append: " " %}
+  <span class="reader-time post-meta"><span class="d-none d-md-inline middot">&middot;</span> {{ yesReadTime }}{% t post.minuteRead %}</span>
 {% elsif number < 1 %}
-  {% assign minReadTime = '&lt; 1 minute read' %}
-  <span class="reader-time post-meta"><span class="d-none d-md-inline middot">&middot;</span> {{ minReadTime }}</span>
+  {% assign minReadTime = '&lt; 1 ' %}
+  <span class="reader-time post-meta"><span class="d-none d-md-inline middot">&middot;</span> {{ minReadTime }}{% t post.minuteRead %}</span>
 {% else %}
   {% assign nilReadTime = number | replace:'0',' ' %}
   {{ nilReadTime }}
